Melhorias na exibição e validação do Sudoku