@@ -17,9 +17,7 @@ import static java.util.stream.Collectors.toMap;
 public class Main {
 
     private final static Scanner scanner = new Scanner(System.in);
-
     private static Board board;
-
     private final static int BOARD_LIMIT = 9;
 
     public static void main(String[] args) {
@@ -28,21 +26,21 @@ public class Main {
                         k -> k.split(";")[0],
                         v -> v.split(";")[1]
                 ));
-        var option = -1;
-        while (true){
-            System.out.println("Selecione uma das opções a seguir");
+
+        while (true) {
+            System.out.println("\n🧩 Bem-vindo ao Sudoku!");
             System.out.println("1 - Iniciar um novo Jogo");
             System.out.println("2 - Colocar um novo número");
             System.out.println("3 - Remover um número");
             System.out.println("4 - Visualizar jogo atual");
             System.out.println("5 - Verificar status do jogo");
-            System.out.println("6 - limpar jogo");
+            System.out.println("6 - Limpar jogo");
             System.out.println("7 - Finalizar jogo");
             System.out.println("8 - Sair");
 
-            option = scanner.nextInt();
+            int option = scanner.nextInt();
 
-            switch (option){
+            switch (option) {
                 case 1 -> startGame(positions);
                 case 2 -> inputNumber();
                 case 3 -> removeNumber();
@@ -50,15 +48,18 @@ public class Main {
                 case 5 -> showGameStatus();
                 case 6 -> clearGame();
                 case 7 -> finishGame();
-                case 8 -> System.exit(0);
-                default -> System.out.println("Opção inválida, selecione uma das opções do menu");
+                case 8 -> {
+                    System.out.println("👋 Obrigado por jogar! Até a próxima.");
+                    System.exit(0);
+                }
+                default -> System.out.println("❌ Opção inválida! Escolha novamente.");
             }
         }
     }
 
     private static void startGame(final Map<String, String> positions) {
-        if (nonNull(board)){
-            System.out.println("O jogo já foi iniciado");
+        if (nonNull(board)) {
+            System.out.println("⚠ O jogo já foi iniciado!");
             return;
         }
 
@@ -66,125 +67,112 @@ public class Main {
         for (int i = 0; i < BOARD_LIMIT; i++) {
             spaces.add(new ArrayList<>());
             for (int j = 0; j < BOARD_LIMIT; j++) {
-                var positionConfig = positions.get("%s,%s".formatted(i, j));
+                var positionConfig = positions.get(String.format("%d,%d", i, j));
                 var expected = Integer.parseInt(positionConfig.split(",")[0]);
                 var fixed = Boolean.parseBoolean(positionConfig.split(",")[1]);
-                var currentSpace = new Space(expected, fixed);
-                spaces.get(i).add(currentSpace);
+                spaces.get(i).add(new Space(expected, fixed));
             }
         }
 
         board = new Board(spaces);
-        System.out.println("O jogo está pronto para começar");
+        System.out.println("✅ O jogo está pronto para começar!");
     }
 
-
     private static void inputNumber() {
-        if (isNull(board)){
-            System.out.println("O jogo ainda não foi iniciado iniciado");
+        if (isNull(board)) {
+            System.out.println("⚠ O jogo ainda não foi iniciado!");
             return;
         }
 
-        System.out.println("Informe a coluna que em que o número será inserido");
+        System.out.println("Informe a coluna onde o número será inserido:");
         var col = runUntilGetValidNumber(0, 8);
-        System.out.println("Informe a linha que em que o número será inserido");
+        System.out.println("Informe a linha onde o número será inserido:");
         var row = runUntilGetValidNumber(0, 8);
-        System.out.printf("Informe o número que vai entrar na posição [%s,%s]\n", col, row);
+        System.out.printf("Informe o número que vai entrar na posição [%d,%d]:\n", col, row);
         var value = runUntilGetValidNumber(1, 9);
-        if (!board.changeValue(col, row, value)){
-            System.out.printf("A posição [%s,%s] tem um valor fixo\n", col, row);
+
+        if (!board.changeValue(col, row, value)) {
+            System.out.printf("🚫 A posição [%d,%d] tem um valor fixo e não pode ser alterada!\n", col, row);
         }
     }
 
     private static void removeNumber() {
-        if (isNull(board)){
-            System.out.println("O jogo ainda não foi iniciado iniciado");
+        if (isNull(board)) {
+            System.out.println("⚠ O jogo ainda não foi iniciado!");
             return;
         }
 
-        System.out.println("Informe a coluna que em que o número será inserido");
+        System.out.println("Informe a coluna do número a ser removido:");
         var col = runUntilGetValidNumber(0, 8);
-        System.out.println("Informe a linha que em que o número será inserido");
+        System.out.println("Informe a linha do número a ser removido:");
         var row = runUntilGetValidNumber(0, 8);
-        if (!board.clearValue(col, row)){
-            System.out.printf("A posição [%s,%s] tem um valor fixo\n", col, row);
+
+        if (!board.clearValue(col, row)) {
+            System.out.printf("🚫 A posição [%d,%d] tem um valor fixo e não pode ser alterada!\n", col, row);
         }
     }
 
     private static void showCurrentGame() {
-        if (isNull(board)){
-            System.out.println("O jogo ainda não foi iniciado iniciado");
+        if (isNull(board)) {
+            System.out.println("⚠ O jogo ainda não foi iniciado!");
             return;
         }
 
-        var args = new Object[81];
-        var argPos = 0;
-        for (int i = 0; i < BOARD_LIMIT; i++) {
-            for (var col: board.getSpaces()){
-                args[argPos ++] = " " + ((isNull(col.get(i).getActual())) ? " " : col.get(i).getActual());
+        System.out.println("📌 Seu jogo está assim:");
+
+        for (List<Space> row : board.getSpaces()) {
+            for (Space space : row) {
+                System.out.print(" " + (isNull(space.getActual()) ? " " : space.getActual()) + " ");
             }
+            System.out.println();
         }
-        System.out.println("Seu jogo se encontra da seguinte forma");
-        System.out.printf((BOARD_TEMPLATE) + "\n", args);
     }
 
     private static void showGameStatus() {
-        if (isNull(board)){
-            System.out.println("O jogo ainda não foi iniciado iniciado");
+        if (isNull(board)) {
+            System.out.println("⚠ O jogo ainda não foi iniciado!");
             return;
         }
 
-        System.out.printf("O jogo atualmente se encontra no status %s\n", board.getStatus().getLabel());
-        if(board.hasErrors()){
-            System.out.println("O jogo contém erros");
-        } else {
-            System.out.println("O jogo não contém erros");
-        }
+        System.out.printf("📌 Status atual do jogo: %s\n", board.getStatus().getLabel());
+        System.out.println(board.hasErrors() ? "❌ O jogo contém erros!" : "✅ O jogo não contém erros!");
     }
 
     private static void clearGame() {
-        if (isNull(board)){
-            System.out.println("O jogo ainda não foi iniciado iniciado");
+        if (isNull(board)) {
+            System.out.println("⚠ O jogo ainda não foi iniciado!");
             return;
         }
 
-        System.out.println("Tem certeza que deseja limpar seu jogo e perder todo seu progresso?");
-        var confirm = scanner.next();
-        while (!confirm.equalsIgnoreCase("sim") && !confirm.equalsIgnoreCase("não")){
-            System.out.println("Informe 'sim' ou 'não'");
-            confirm = scanner.next();
-        }
+        System.out.println("Tem certeza que deseja limpar seu jogo? (sim/não)");
+        var confirm = scanner.next().toLowerCase();
 
-        if(confirm.equalsIgnoreCase("sim")){
+        if (confirm.equals("sim")) {
             board.reset();
+            System.out.println("🔄 O jogo foi limpo!");
         }
     }
 
     private static void finishGame() {
-        if (isNull(board)){
-            System.out.println("O jogo ainda não foi iniciado iniciado");
+        if (isNull(board)) {
+            System.out.println("⚠ O jogo ainda não foi iniciado!");
             return;
         }
 
-        if (board.gameIsFinished()){
-            System.out.println("Parabéns você concluiu o jogo");
-            showCurrentGame();
+        if (board.gameIsFinished()) {
+            System.out.println("🎉 Parabéns, você concluiu o jogo!");
             board = null;
-        } else if (board.hasErrors()) {
-            System.out.println("Seu jogo conté, erros, verifique seu board e ajuste-o");
         } else {
-            System.out.println("Você ainda precisa preenhcer algum espaço");
+            System.out.println(board.hasErrors() ? "❌ O jogo contém erros!" : "⚠ Você ainda precisa preencher alguns espaços.");
         }
     }
 
-
-    private static int runUntilGetValidNumber(final int min, final int max){
-        var current = scanner.nextInt();
-        while (current < min || current > max){
-            System.out.printf("Informe um número entre %s e %s\n", min, max);
+    private static int runUntilGetValidNumber(final int min, final int max) {
+        int current;
+        do {
+            System.out.printf("Informe um número entre %d e %d: ", min, max);
             current = scanner.nextInt();
-        }
+        } while (current < min || current > max);
         return current;
     }
-
 }
